[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
actix-web = "4"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.9.25"
tokio = { version = "1", features = ["full"] }
reqwest = "0.12.4"
async-trait = "0.1.80"
